# agentnxt-code-assist

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.simulation.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  cloud-run-deploy.yml  dependabot-auto-merge.yml  docker-publish.yml  pages.yml  security-scan.yml
adr/: adr.md
deploy/caddy/: Caddyfile
docs/: agent-id-protocol.md  architecture.md  authzen.md  code-assist-agent.md  deploy-vps.md  external-enforcement-architecture.md  howto.md  production-runbook.md  reference.md  setup.md
scripts/: deploy-simple.sh  deploy-vps.sh  simulate-production.sh
site/: CNAME  index.html  styles.css
src/agennext_codeassist/: __init__.py  aider_runner.py  authzen.py  change_log.py  check_planner.py  cli.py  daily_status.py  decision_log.py  email_notifier.py  empathy.py  jira_integration.py  local_llm.py  memory_store.py  ports.py  project_management.py  protocols.py  rag_knowledge.py  repo_audit.py  schemas.py  self_improvement.py  self_respect.py  server.py  situation_aware.py  slack_notifier.py  target_reference.py  tool_registry.py  travel_discovery.py  trust_framework.py  user_profile.py  webhook_notifier.py
src/agentnxt_code_assist/: __init__.py  agent_id_protocol.py  aider_runner.py  audit_trace.py  auth.py  change_log.py  cli.py  config.py  context_aware.py  context_fetcher.py  continuous_improvement.py  daily_status.py  decision_log.py  dependency_audit.py  email_notifier.py  (+22 more)
tests/: test_aider_runner.py  test_production_contract.py
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts
(+15 files in other folders)
