[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnxt-code-assist"
version = "0.1.0"
description = "AgentNXT code assistant powered by the Aider Python scripting API."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "aider-chat>=0.86.0",
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agentnxt-code-assist = "agentnxt_code_assist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentnxt_code_assist = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
